# mcp-elicitation-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: manual-inspector-test.md
examples/: manual-everything.config.yaml
src/mcp_elicitation_proxy/: __init__.py  config.py  errors.py  logging.py  middleware.py  pipeline.py  server.py  upstream.py
src/mcp_elicitation_proxy/elicitation/: __init__.py  builder.py  client.py  models.py
src/mcp_elicitation_proxy/policies/: __init__.py  ambiguity.py  base.py  confirmation.py  required_fields.py  schema_required.py  sensitive_required.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_discovery_with_policies.py  test_elicitation_builder.py  test_elicitation_config.py  test_elicitation_middleware.py  test_error_payloads.py  test_first_slice_end_to_end.py  test_generic_upstream_tool.py  test_middleware_elicitation_config.py  test_no_elicitation_when_complete.py  test_pipeline_config.py  test_proxy_discovery.py  test_readme_examples.py  test_schema_required_policy.py  test_sensitive_required_policy.py  test_tool_call_forwarding.py  test_upstream.py
