[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-elicitation-proxy"
version = "0.1.0"
description = "FastMCP proxy server with tool-call elicitation middleware"
readme = "README.md"
license = "MIT"
authors = [{ name = "Roberto Cirillo" }]
requires-python = ">=3.11"
keywords = ["mcp", "fastmcp", "proxy", "elicitation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastmcp>=3.2,<4",
  "pydantic>=2",
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/robertocirillo/mcp-elicitation-proxy"
Repository = "https://github.com/robertocirillo/mcp-elicitation-proxy"
Issues = "https://github.com/robertocirillo/mcp-elicitation-proxy/issues"
Changelog = "https://github.com/robertocirillo/mcp-elicitation-proxy/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[project.scripts]
mcp-elicitation-proxy = "mcp_elicitation_proxy.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_elicitation_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
